# panchang

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build-publish.yaml  doc-deploy.yaml
docs/: README.md  index.md
search/: search_index.json
